# rlhf-gsm8k

./: README.md  pyproject.toml  requirements.txt
gsm8k_utils/: __init__.py  grpo.py  utils.py
nbs/: 00_qwen2_5_0_5B_grpo_gsm8k.ipynb  00_smollm2-135M-grpo-gsm8k.ipynb  01_sft.ipynb  02_grpo.ipynb  02_grpo_sweep.ipynb
